too much to fix...

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -17,3 +17,7 @@ li {
 .form-group {
   margin-bottom: 5px;
 }
+
+.container {
+  width: 70%;
+}
